--- a/Main.css
+++ b/Main.css
@@ -2,24 +2,30 @@ h1 {
     background:red;
     }
     
-    .paragraph-1
-     {
+.paragraph-1
+    {
     background:blue;
     font-size: 32pt;
     color:red
     }
     
-    .paragraph-2
-     {
+.paragraph-2
+    {
     border: 10px solid yellow;
     border-radius:5px;
     font-size: 22pt;
     }
     
-    .paragraph-3
-     {
+.paragraph-3
+    {
     font-weight: bold;
     font-size:18px;
     font-family: Courier New;
     }
-    
+.paragraph-4
+    {
+    font-size:24px;
+    text-align:center;
+    text-shadow: 1px 2px 0px green;
+    font-style: italic;
+    }
